--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,6 +2,6 @@
 
 <div class="row mt-3">
     <div class="alert alert-danger col-6 offset-3" role="alert">
-        <h4 class="alert-heading"><%= message %></h4>
+        <h4 class="alert-heading">Error</h4>
     </div>
 </div>
